Refactoring in the "Lambda" project.